--- a/site/config.toml
+++ b/site/config.toml
@@ -9,7 +9,7 @@ title = "Homepage"
 # disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
 
 [taxonomies]
-  category = 'categories'
-  series = 'series'
-  tag = 'tags'
+  category = "categories"
+  series = "series"
+  tag = "tags"
 
